--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "short_name": "Portal CGGT",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f3f4f6",
+  "background_color": "#003399",
   "theme_color": "#003399",
   "orientation": "any",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/9318/9318538.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/1828/1828884.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/9318/9318538.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/1828/1828884.png",
       "sizes": "512x512",
       "type": "image/png"
     }
